# server/main.go
@@ -16,24 +16,12 @@ import (
 // @description Swagger chỉ phục vụ cho việc hiển thị các API được phép sử dụng
 // @description Nếu bạn muốn sử dụng phải thực hiện trên postman
 // @description Để có file test postman, bạn cần liên hệ người quản lý API
-// @termsOfService http://localhost:8000
 
 // @contact.name Ngô Hoài Phong
 // @contact.url http://www.swagger.io/support
 // @contact.email hoaiphong01012002@gmai.com
 
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
-//  @query.collection.format multi
-
-// @securityDefinitions.basic  BasicAuth
-
-// @externalDocs.description  OpenAPI
-// @externalDocs.url          https://swagger.io/resources/open-api/
-
-// @host localhost:8000
-// @query.collection.format multi
+// @host localhost:8000/
 func init() {
 	conf.SetEnv()
 	app := route.NewService()
